--- a/src/simple/CMakeLists.txt
+++ b/src/simple/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 2.8.3)
 project(simple)
 
 find_package( catkin REQUIRED COMPONENTS roscpp )
+find_package(catkin REQUIRED genmsg actionlib_msgs actionlib)
+## add_action_files(DIRECTORY action FILES DoDishes.action)
+## generate_messages(DEPENDENCIES actionlib_msgs)
 
 catkin_package()
 
@@ -23,15 +26,30 @@ include_directories( include ${catkin_INCLUDE_DIRS} )
 
 
 ## create followplan executables
-add_executable(followplan followplan.cpp)
-target_link_libraries(followplan ${catkin_LIBRARIES})
+## add_executable(followplan followplan.cpp)
+## target_link_libraries(followplan ${catkin_LIBRARIES})
 
 
 ## create moveongrid executables
-add_executable(moveongrid moveongrid.cpp)
-target_link_libraries(moveongrid ${catkin_LIBRARIES})
+## add_executable(moveongrid moveongrid.cpp)
+## target_link_libraries(moveongrid ${catkin_LIBRARIES})
 
 
 ## create move around node executables
-add_executable(move_around move_around.cpp)
-target_link_libraries(move_around ${catkin_LIBRARIES})
+## add_executable(move_around move_around.cpp)
+## target_link_libraries(move_around ${catkin_LIBRARIES})
+
+
+## create navigatepoints node executables
+add_executable(navigatepoints navigatepoints.cpp)
+target_link_libraries(navigatepoints ${catkin_LIBRARIES})
+
+
+## create navigatepoints node executables
+add_executable(getplan getplan.cpp)
+target_link_libraries(getplan ${catkin_LIBRARIES})
+
+
+## create navigatepoints node executables
+add_executable(eigens eigens.cpp)
+target_link_libraries(eigens ${catkin_LIBRARIES})
