--- a/src/cse180final/package.xml
+++ b/src/cse180final/package.xml
@@ -40,12 +40,22 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>nav_msgs</build_depend>
+  <build_depend>roscpp</build_depend>
+  <run_depend>roscpp</run_depend>
   <build_depend>sensor_msgs</build_depend>
-
-  <run_depend>nav_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
-
+  <build_depend>actionlib</build_depend>
+  <run_depend>actionlib</run_depend>
+  <build_depend>move_base_msgs</build_depend>
+  <run_depend>move_base_msgs</run_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <run_depend>geometry_msgs</run_depend>
+  <build_depend>laser_geometry</build_depend>
+  <run_depend>laser_geometry</run_depend>
+  <build_depend>tf</build_depend>
+  <run_depend>tf</run_depend>
+  <build_depend>message_filters</build_depend>
+  <run_depend>message_filters</run_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
