moves but obstacle avoidance is a huge problem

--- a/src/cse180final/CMakeLists.txt
+++ b/src/cse180final/CMakeLists.txt
@@ -9,7 +9,7 @@ find_package(catkin REQUIRED genmsg actionlib_msgs actionlib)
 catkin_package()
 
 #include_directories( include ${catkin_INCLUDE_DIRS} )
-include_directories( include ${catkin_INCLUDE_DIRS} ${EIGEN_INCLUDE_DIR} )
+include_directories( include ${catkin_INCLUDE_DIRS} )
 
 ## Add support for C++11, supported in ROS Kinetic and newer
 # add_definitions(-std=c++11)
@@ -17,9 +17,12 @@ include_directories( include ${catkin_INCLUDE_DIRS} ${EIGEN_INCLUDE_DIR} )
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED )
+find_package(catkin REQUIRED COMPONENTS
+    random_numbers
+    tf
+)
 # find_package(catkin REQUIRED COMPONENTS tf eigen)
-include_directories(${EIGEN3_INCLUDE_DIR})
+# include_directories(${EIGEN3_INCLUDE_DIR})
 # include_directories(${TF_INCLUDE_DIR})
 
 
@@ -51,10 +54,11 @@ catkin_package(
 # add_executable(scan_cloud scan_cloud.cpp)
 # target_link_libraries(scan_cloud ${catkin_LIBRARIES})
 
-add_executable(pointcloud pointcloud.cpp)
-target_link_libraries(pointcloud ${catkin_LIBRARIES})
+# add_executable(pointcloud pointcloud.cpp)
+# target_link_libraries(pointcloud ${catkin_LIBRARIES})
 
-
+add_executable(navigatepoints navigatepoints.cpp)
+target_link_libraries(navigatepoints ${catkin_LIBRARIES})
 
 
 
