--- a/src/cse180final/package.xml
+++ b/src/cse180final/package.xml
@@ -41,8 +41,11 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>eigen_core</build_depend>
-  <run_depend>eigen_core</run_depend>
+  <build_depend>random_numbers</build_depend>
+  <run_depend>random_numbers</run_depend>
+
+  <build_depend>message_filters</build_depend>
+  <run_depend>message_filters</run_depend>
 
   <build_depend>cmake_modules</build_depend>
   <run_depend>cmake_modules</run_depend>
