two 20+ minutes runs without collision, first one ended with husky being stuck between two posts, fixed, and the 2nd ended with it running over a post lol

--- a/src/cse180final/CMakeLists.txt
+++ b/src/cse180final/CMakeLists.txt
@@ -143,14 +143,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(
-    pointcloud 
-    pointcloud.cpp
-    )
-add_executable(
-    scan_cloud 
-    scan_cloud.cpp
-    )
+# add_executable( pointcloud pointcloud.cpp )
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -163,12 +156,8 @@ add_executable(
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(pointcloud
-    ${catkin_LIBRARIES}
-    )
-target_link_libraries(scan_cloud
-    ${catkin_LIBRARIES}
-    )
+# target_link_libraries( pointcloud ${catkin_LIBRARIES} )
+
 
 #############
 ## Install ##
@@ -224,4 +213,6 @@ target_link_libraries(scan_cloud
 add_executable(randomnav randomnav.cpp)
 target_link_libraries(randomnav ${catkin_LIBRARIES})
 
+add_executable( scan_cloud scan_cloud.cpp )
+target_link_libraries( scan_cloud ${catkin_LIBRARIES} )
 
